<resources>
    <string name="app_name">Contact Book</string>
    <string name="header_contacts">Контакты</string>
    <string name="header_choose_location">Выберите местоположение контакта</string>
    <string name="header_organizations">Организации по адресу</string>
    <string name="header_description">Описание контакта</string>
    <string name="header_select_location">Выбрано местоположение контакта</string>
    <string name="toolbar_header_person_list">Список контактов</string>
    <string name="toolbar_header_person_details">Детали контакта</string>
    <string name="button_text_remind_birthday_on">Напоминание ВКЛ</string>
    <string name="button_text_remind_birthday_off">Напоминание ВЫКЛ</string>
    <string name="text_address_not_set">Местоположение контакта не задано</string>
    <string name="text_organizations_not_found">Организации не найдены</string>
    <string name="text_coordinates_not_set">Координаты неизвестны</string>
    <string name="text_birthday_date">День рождения: %s</string>
    <string name="text_contact_type_phone">Телефон</string>
    <string name="text_contact_type_email">Email:</string>
    <string name="text_contact_type_skype">Скайп</string>
    <string name="text_contact_type_site">Сайт</string>
    <string name="text_contact_type_other">Другое</string>
    <string name="text_notset">Не задано</string>
    <string name="text_error_fetch_person_location">Ошибка при получении местоположения</string>
    <string name="text_error_fetch_list_location">Ошибка при получении списка местоположений контактов</string>
    <string name="text_success_save_location">Ошибка при получении списка местоположений контактов</string>
    <string name="text_birthday">День рождения</string>
    <string name="text_remind_birthday">Сегодня день рождения у %s</string>
    <string name="text_remind">Напоминать о ДР</string>
    <string name="notification_channel_name">appcontact_nc</string>
    <string name="notification_channel_desc">App contact notification channel description</string>
    <string name="permission_request_title">Приложению необходимо предоставить разрешения</string>
    <string name="permission_request_btn">Запросить разрешения</string>
    <string name="permission_request_message">Это приложение требует предоставить ему необходимые разрешения</string>
    <string name="permission_request_btn_positive">Согласен</string>
    <string name="permission_request_btn_negative">Не согласен</string>
    <string name="permission_granted">Необходимые разрешения получены</string>
    <string name="permission_not_received">Разрешения не получены</string>
    <string name="action_search">Поиск</string>
    <string name="action_set_location">Установить местоположение</string>
    <string name="action_change_location">Изменить местоположение</string>
    <string name="text_header_map_view">Местоположение контакта</string>
    <string name="button_save_person_location">Сохранить местоположение</string>
    <string name="error_get_person_list">Ошибка при получении списка контактов</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDPgvJHJnPPvXN-Tw3aXIPE8eCE31FrrQw</string>
    <string name="yandex_biz_search_key" templateMergeStrategy="preserve" translatable="false">cf01dc56-4f58-4176-ab6f-cfd07cce9721</string>
</resources>
